Fix overflowed product card

--- a/assets/css/product-card.css
+++ b/assets/css/product-card.css
@@ -1,8 +1,5 @@
 .product-card {
   background-color: var(--white);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   border-radius: 6px;
   border: 1px solid var(--smoke50);
   box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.04);
@@ -24,7 +21,7 @@
 }
 
 .product-card .info {
-  padding: 1rem 0rem 1rem 1rem;
+  padding: .5rem 1rem 1rem 1rem;
   font-size: 14px;
   color: var(--graphene);
 }
@@ -104,6 +101,9 @@
 
 @media (min-width: 1300px) {
   .product-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     height: 328px;
   }
 
@@ -114,5 +114,13 @@
 
   .product-card .actions {
     display: none;
+  }
+}
+
+@media (max-width: 1300px) {
+  .product-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 }
